tests/baselines/reference/emitter.asyncGenerators.classMethods.es5(strict=true).errors.txt
C2.ts(3,19): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
C3.ts(3,19): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== C1.ts (0 errors) ====
    class C1 {
        async * f() {
        }
    }
==== C2.ts (1 errors) ====
    class C2 {
        async * f() {
            const x = yield;
                      ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        }
    }
==== C3.ts (1 errors) ====
    class C3 {
        async * f() {
            const x = yield 1;
                      ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        }
    }
==== C4.ts (0 errors) ====
    class C4 {
        async * f() {
            const x = yield* [1];
        }
    }
==== C5.ts (0 errors) ====
    class C5 {
        async * f() {
            const x = yield* (async function*() { yield 1; })();
        }
    }
==== C6.ts (0 errors) ====
    class C6 {
        async * f() {
            const x = await 1;
        }
    }
==== C7.ts (0 errors) ====
    class C7 {
        async * f() {
            return 1;
        }
    }
==== C8.ts (0 errors) ====
    class C8 {
        g() {
        }
        async * f() {
            this.g();
        }
    }
==== C9.ts (0 errors) ====
    class B9 {
        g() {}
    }
    class C9 extends B9 {
        async * f() {
            super.g();
        }
    }
    